Add vuex store and authorization context

--- a/TakeAIMeal.WebUI/src/i18n/en.json
+++ b/TakeAIMeal.WebUI/src/i18n/en.json
@@ -12,6 +12,8 @@
   "Header": {
     "Home": "Home",
     "About": "About",
-    "SignIn": "Sign in"
+    "SignIn": "Sign in",
+    "SignOut": "Sign out",
+    "Account": "Account"
   }
 }
