--- a/TakeAIMeal.Common/Resources/Prompts.resx
+++ b/TakeAIMeal.Common/Resources/Prompts.resx
@@ -121,7 +121,7 @@
     <value>Generate a title for dish based on this ingredients :  {0}</value>
   </data>
   <data name="RecipeFromIngredients" xml:space="preserve">
-    <value>Generate a recipe using these ingredients : {0}</value>
+    <value>Generate a recipe for a {1} using these ingredients : {0}</value>
   </data>
   <data name="TipHealthyEating" xml:space="preserve">
     <value>Generate one short tip about healthy eating.</value>
