Fix quick recipe view transaltions and recipe generation

--- a/TakeAIMeal.WebUI/src/i18n/en.json
+++ b/TakeAIMeal.WebUI/src/i18n/en.json
@@ -36,8 +36,8 @@
       "Dinner": "Dinner"
     },
     "Categories": {
-      "Grain": "Grain",
-      "Dairy": "Dairy",
+      "GrainProducts": "Grain",
+      "DairyProducts": "Dairy",
       "Meat": "Meat",
       "Fish": "Fish",
       "Vegetables": "Vegetables",
