--- a/TakeAIMeal.WebUI/src/i18n/pl.json
+++ b/TakeAIMeal.WebUI/src/i18n/pl.json
@@ -7,6 +7,7 @@
     "ChooseProducts": "Wskaż produkty, których nie lubisz",
     "SaveCookbook": "Zapisuj przepisy w książce kucharskiej",
     "HaveAccount": "Masz konto?",
+    "HaventAccound": "Nie masz konta?",
     "SignIn": "Zaloguj się"
   },
   "Header": {
@@ -15,6 +16,12 @@
     "SignIn": "Zaloguj się",
     "SignOut": "Wyloguj",
     "Account": "Konto"
+  },
+  "Account": {
+    "Password": "Hasło",
+    "RepeatPassword": "Powtórz hasło",
+    "FirstName": "Imię",
+    "ForgottenPassword": "Zapomniałeś hasła?"
   },
   "Dropdown": {
     "PleaseSelect": "Wybierz",
