--- a/TakeAIMeal.WebUI/src/i18n/en.json
+++ b/TakeAIMeal.WebUI/src/i18n/en.json
@@ -20,7 +20,7 @@
   "Account": {
     "Password": "Password",
     "RepeatPassword": "Repeat password",
-    "FirstName": "First name",
+    "UserName": "User name",
     "ForgottenPassword": "Forgotten password?"
   },
   "Dropdown": {
