--- a/TakeAIMeal.WebUI/src/i18n/pl.json
+++ b/TakeAIMeal.WebUI/src/i18n/pl.json
@@ -8,7 +8,9 @@
     "SaveCookbook": "Zapisuj przepisy w książce kucharskiej",
     "HaveAccount": "Masz konto?",
     "HaventAccound": "Nie masz konta?",
-    "SignIn": "Zaloguj się"
+    "SignIn": "Zaloguj się",
+    "Cookbook": "Książka kucharska",
+    "OpenPersonalizedCookBok": "Otwórz swoją spersonalizowaną książkę kucharską"
   },
   "Header": {
     "Home": "Strona główna",
@@ -88,6 +90,7 @@
     }
   },
   "Recipe": {
-    "Title" : "Przepis"
+    "Title": "Przepis",
+    "Save": "Dodaj do książki kucharskiej"
   }
 }
