--- a/TakeAIMeal.WebUI/src/i18n/pl.json
+++ b/TakeAIMeal.WebUI/src/i18n/pl.json
@@ -22,10 +22,14 @@
     "RepeatPassword": "Powtórz hasło",
     "UserName": "Nazwa użytkownika",
     "ForgottenPassword": "Zapomniałeś hasła?",
-    "LoginSuccess": "Zalogowano pomyślnie!",
-    "LoginFailed": "Nie zalogowano, sprawdź czy użytkownik i hasło są prawidłowe!",
-    "RegistrationSuccess": "Konto utworzone pomyślnie!",
-    "RegistrationFailed": "Nie utworzono konta!"
+    "Login": {
+      "Success": "Zalogowano pomyślnie!",
+      "Failed": "Nie zalogowano, sprawdź czy użytkownik i hasło są prawidłowe!"
+    },
+    "Registration": {
+      "Success": "Konto utworzone pomyślnie!",
+      "Failed": "Nie utworzono konta!"
+    }
   },
   "Dropdown": {
     "PleaseSelect": "Wybierz",
