Add cookbook component

--- a/TakeAIMeal.WebUI/src/i18n/en.json
+++ b/TakeAIMeal.WebUI/src/i18n/en.json
@@ -100,5 +100,12 @@
   "Recipe": {
     "Title": "Recipe",
     "Save": "Add to cookbook"
+  },
+  "Cookbook": {
+    "Title": "Cookbook",
+    "QuickRecipe": "Quick recipe",
+    "PersonalizedRecipe": "Personalized recipe",
+    "RandomRecipe": "Random recipe",
+    "See": "See"
   }
 }
