Add saved recipe view and delete option

--- a/TakeAIMeal.WebUI/src/i18n/pl.json
+++ b/TakeAIMeal.WebUI/src/i18n/pl.json
@@ -99,7 +99,8 @@
   },
   "Recipe": {
     "Title": "Przepis",
-    "Save": "Dodaj do książki kucharskiej"
+    "Save": "Dodaj do książki kucharskiej",
+    "SaveSuccess": "Przepis został dodany do książki kucharskiej"
   },
   "Cookbook": {
     "Title": "Książka kucharska",
@@ -107,5 +108,10 @@
     "PersonalizedRecipe": "Przepis spersonalizowany",
     "RandomRecipe": "Losowy przepis",
     "See": "Zobacz"
+  },
+  "SavedRecipe": {
+    "Title": "Przepis",
+    "Delete": "Usuń",
+    "DeleteSuccess": "Usunięto przepis z książki kucharskiej"
   }
 }
