--- a/TakeAIMeal.WebUI/src/i18n/en.json
+++ b/TakeAIMeal.WebUI/src/i18n/en.json
@@ -99,7 +99,8 @@
   },
   "Recipe": {
     "Title": "Recipe",
-    "Save": "Add to cookbook"
+    "Save": "Add to cookbook",
+    "SaveSuccess": "Recipe has been added to cookbook"
   },
   "Cookbook": {
     "Title": "Cookbook",
@@ -107,5 +108,10 @@
     "PersonalizedRecipe": "Personalized recipe",
     "RandomRecipe": "Random recipe",
     "See": "See"
+  },
+  "SavedRecipe": {
+    "Title": "Recipe",
+    "Delete": "Delete",
+    "DeleteSuccess": "Recipe has been removed from cookbook"
   }
 }
