--- a/TakeAIMeal.WebUI/src/i18n/pl.json
+++ b/TakeAIMeal.WebUI/src/i18n/pl.json
@@ -46,7 +46,32 @@
     "Category": "Kategoria",
     "Product": "Produkty",
     "Generate": "Generuj przepis",
-    "Add": "Dodaj",
+    "Add": "Dodaj"
+  },
+  "Recipe": {
+    "Title": "Przepis",
+    "Save": "Dodaj do książki kucharskiej",
+    "SaveSuccess": "Przepis został dodany do książki kucharskiej"
+  },
+  "Cookbook": {
+    "Title": "Książka kucharska",
+    "QuickRecipe": "Szybki przepis",
+    "PersonalizedRecipe": "Przepis spersonalizowany",
+    "RandomRecipe": "Losowy przepis",
+    "See": "Zobacz"
+  },
+  "SavedRecipe": {
+    "Title": "Przepis",
+    "Delete": "Usuń",
+    "DeleteSuccess": "Usunięto przepis z książki kucharskiej"
+  },
+  "RandomRecipe": {
+    "Title": "Losowy przepis",
+    "Meal": "Posiłek",
+    "Generate": "Generuj przepis",
+    "ProvideMealType": "Podaj typ posiłku:"
+  },
+  "Dictionaries": {
     "Meals": {
       "Breakfast": "Śniadanie",
       "Lunch": "Obiad",
@@ -96,22 +121,5 @@
       "SoyBeans": "Soja",
       "Lentils": "Soczewica"
     }
-  },
-  "Recipe": {
-    "Title": "Przepis",
-    "Save": "Dodaj do książki kucharskiej",
-    "SaveSuccess": "Przepis został dodany do książki kucharskiej"
-  },
-  "Cookbook": {
-    "Title": "Książka kucharska",
-    "QuickRecipe": "Szybki przepis",
-    "PersonalizedRecipe": "Przepis spersonalizowany",
-    "RandomRecipe": "Losowy przepis",
-    "See": "Zobacz"
-  },
-  "SavedRecipe": {
-    "Title": "Przepis",
-    "Delete": "Usuń",
-    "DeleteSuccess": "Usunięto przepis z książki kucharskiej"
   }
 }
