Add new products

--- a/TakeAIMeal.WebUI/src/i18n/en.json
+++ b/TakeAIMeal.WebUI/src/i18n/en.json
@@ -107,45 +107,170 @@
       "GrainProducts": "Grain",
       "DairyProducts": "Dairy",
       "Meat": "Meat",
-      "Fish": "Fish",
+      "Fish": "Fish and sea foods",
       "Vegetables": "Vegetables",
       "Fruits": "Fruits",
       "Herbs": "Herbs",
       "DryLegumes": "Dry legumes"
     },
     "Products": {
-      "WhiteRice": "White rice",
-      "BrownRice": "Brown rice",
+      "Pear": "Pear",
+      "Apple": "Apple",
+      "Banana": "Banana",
+      "Orange": "Orange",
+      "Mango": "Mango",
+      "Strawberry": "Strawberry",
+      "Pineapple": "Pineapple",
+      "Watermelon": "Watermelon",
+      "Grapefruit": "Grapefruit",
+      "Lemon": "Lemon",
+      "Avocado": "Avocado",
+      "Blueberry": "Blueberry",
+      "Raspberry": "Raspberry",
+      "Peach": "Peach",
+      "Kiwi": "Kiwi",
+      "Cherry": "Cherry",
+      "Plum": "Plum",
+      "Coconut": "Coconut",
+      "Papaya": "Papaya",
+      "Fig": "Fig",
+      "Lychee": "Lychee",
+      "Pomegranate": "Pomegranate",
+      "Blackberry": "Blackberry",
+      "Apricot": "Apricot",
+      "Cantaloupe": "Cantaloupe",
+      "Guava": "Guava",
+      "Grape": "Grape",
+      "Lime": "Lime",
+      "PassionFruit": "Passion fruit",
+      "Cranberry": "Cranberry",
       "RedRice": "Red rice",
       "WildRice": "Wild rice",
+      "Tuna": "Tuna",
+      "Potato": "Potato",
+      "RedKidneyBeans": "Red Kidney beans",
+      "SoyBeans": "Soy beans",
+      "Pasta": "Pasta",
+      "Rice": "Rice",
+      "Couscous": "Couscous",
+      "Bulgur": "Bulgur",
+      "RolledOats": "Rolled oats",
+      "Cornmeal": "Cornmeal",
+      "BuckwheatGroats": "Buckwheat groats",
+      "PearlBarley": "Pearl barley",
+      "ArborioRice": "Arborio rice",
+      "SushiRice": "Sushi rice",
+      "BasmatiRice": "Basmati rice",
+      "JasmineRice": "Jasmine rice",
+      "BrownRice": "Brown rice",
       "Milk": "Milk",
-      "Eggs": "Eggs",
+      "Cheese": "Cheese",
       "Butter": "Butter",
       "Yogurt": "Yogurt",
-      "Chicken": "Chicken",
-      "Pork": "Pork",
-      "Beef": "Beef",
+      "Cream": "Cream",
+      "SourCream": "Sour cream",
+      "CottageCheese": "Cottage cheese",
+      "IceCream": "Ice cream",
+      "WhippedCream": "Whipped cream",
+      "CondensedMilk": "Condensed milk",
+      "EvaporatedMilk": "Evaporated milk",
+      "CreamCheese": "Cream cheese",
+      "GreekYogurt": "Greek yogurt",
+      "Mascarpone": "Mascarpone",
+      "RicottaCheese": "Ricotta cheese",
+      "MozzarellaCheese": "Mozzarella cheese",
+      "CheddarCheese": "Cheddar cheese",
+      "ParmesanCheese": "Parmesan cheese",
+      "FetaCheese": "Feta cheese",
+      "ChickenBreast": "Chicken breast",
+      "ChickenThighs": "Chicken thighs",
+      "ChickenWings": "Chicken wings",
+      "ChickenDrumsticks": "Chicken drumsticks",
+      "GroundBeef": "Ground beef",
+      "BeefSteak": "Beef steak",
+      "PorkChops": "Pork chops",
+      "PorkTenderloin": "Pork tenderloin",
+      "PorkRibs": "Pork ribs",
+      "GroundPork": "Ground pork",
+      "Bacon": "Bacon",
+      "Sausages": "Sausages",
       "Lamb": "Lamb",
+      "GroundLamb": "Ground lamb",
+      "TurkeyBreast": "Turkey breast",
+      "TurkeyLegs": "Turkey legs",
+      "GroundTurkey": "Ground turkey",
+      "DuckBreast": "Duck breast",
+      "DuckLegs": "Duck legs",
+      "VenisonSteak": "Venison steak",
+      "VenisonGroundMeat": "Venison ground meat",
+      "Ham": "Ham",
+      "CornedBeef": "Corned beef",
+      "Salami": "Salami",
+      "HotDogs": "Hot dogs",
+      "Shrimp": "Shrimp",
       "Salmon": "Salmon",
-      "Tuna": "Tuna",
       "Cod": "Cod",
+      "Crab": "Crab",
+      "Lobster": "Lobster",
+      "Scallops": "Scallops",
+      "Mussels": "Mussels",
+      "Oysters": "Oysters",
+      "Squid": "Squid",
+      "Octopus": "Octopus",
+      "Anchovies": "Anchovies",
       "Trout": "Trout",
-      "Tomato": "Tomato",
-      "Potato": "Potato",
+      "Flounder": "Flounder",
+      "Halibut": "Halibut",
+      "Mackerel": "Mackerel",
+      "CannedTuna": "Canned tuna",
+      "FishSticks": "Fish sticks",
+      "Caviar": "Caviar",
       "Carrot": "Carrot",
+      "Tomato": "Tomato",
+      "Onion": "Onion",
+      "Broccoli": "Broccoli",
       "Cabbage": "Cabbage",
-      "Apple": "Apple",
-      "Pear": "Pear",
-      "Orange": "Orange",
-      "Lemon": "Lemon",
+      "Spinach": "Spinach",
+      "Cauliflower": "Cauliflower",
+      "BellPepper": "Bell pepper",
+      "Garlic": "Garlic",
+      "Mushroom": "Mushroom",
+      "Zucchini": "Zucchini",
+      "Pumpkin": "Pumpkin",
+      "SweetPotato": "Sweet potato",
+      "Cucumber": "Cucumber",
+      "Eggplant": "Eggplant",
+      "Celery": "Celery",
+      "GreenBeans": "Green beans",
+      "Peas": "Peas",
+      "Radish": "Radish",
+      "Asparagus": "Asparagus",
+      "BrusselsSprouts": "Brussels sprouts",
+      "Kale": "Kale",
+      "Lettuce": "Lettuce",
+      "Artichoke": "Artichoke",
+      "Beetroot": "Beetroot",
+      "Corn": "Corn",
+      "Leek": "Leek",
+      "Turnip": "Turnip",
+      "Squashy": "Squashy",
+      "Basil": "Basil",
       "Parsley": "Parsley",
+      "Cilantro": "Cilantro",
+      "Rosemary": "Rosemary",
+      "Thyme": "Thyme",
+      "Sage": "Sage",
+      "Oregano": "Oregano",
+      "Mint": "Mint",
       "Dill": "Dill",
       "Chives": "Chives",
-      "Oregano": "Oregano",
-      "WhiteBeans": "White beans",
-      "RedKidneyBeans": "Red kidney beans",
-      "SoyBeans": "Soy beans",
-      "Lentils": "Lentils"
+      "BayLeaves": "Bay leaves",
+      "Marjoram": "Marjoram",
+      "Lemongrass": "Lemongrass",
+      "Lentils": "Lentils",
+      "SplitPeas": "Split peas",
+      "LimaBeans": "Lima beans",
+      "MungBeans": "Mung beans"
     },
     "Diets": {
       "Basic": "Basic",
