--- a/TakeAIMeal.WebUI/src/i18n/pl.json
+++ b/TakeAIMeal.WebUI/src/i18n/pl.json
@@ -107,45 +107,170 @@
       "GrainProducts": "Produkty zbożowe",
       "DairyProducts": "Nabiał",
       "Meat": "Mięso",
-      "Fish": "Ryby",
+      "Fish": "Ryby i owoce morza",
       "Vegetables": "Warzywa",
       "Fruits": "Owoce",
       "Herbs": "Zioła",
       "DryLegumes": "Suche rośliny strączkowe"
     },
     "Products": {
-      "WhiteRice": "Ryż biały",
-      "BrownRice": "Ryż brązowy",
-      "RedRice": "Ryż czerwony",
+      "Pear": "Gruszka",
+      "Apple": "Jabłko",
+      "Banana": "Banan",
+      "Orange": "Pomarańcza",
+      "Mango": "Mango",
+      "Strawberry": "Truskawka",
+      "Pineapple": "Ananas",
+      "Watermelon": "Arbuz",
+      "Grapefruit": "Grejpfrut",
+      "Lemon": "Cytryna",
+      "Avocado": "Awokado",
+      "Blueberry": "Borówka amerykańska",
+      "Raspberry": "Malina",
+      "Peach": "Brzoskwinia",
+      "Kiwi": "Kiwi",
+      "Cherry": "Wiśnia",
+      "Plum": "Śliwka",
+      "Coconut": "Kokos",
+      "Papaya": "Papaja",
+      "Fig": "Fig",
+      "Lychee": "Liczi",
+      "Pomegranate": "Granat",
+      "Blackberry": "Jeżyna",
+      "Apricot": "Morela",
+      "Cantaloupe": "Melon kantalupowy",
+      "Guava": "Gujawa",
+      "Grape": "Winogrono",
+      "Lime": "Limetka",
+      "PassionFruit": "Marakuja",
+      "Cranberry": "Żurawina",
+      "RedRice": "Czerwony ryż",
       "WildRice": "Ryż dziki",
+      "Tuna": "Tuńczyk",
+      "Potato": "Ziemniak",
+      "SoyBeans": "Soja",
+      "Pasta": "Makaron",
+      "Rice": "Ryż",
+      "Couscous": "Kuskus",
+      "Bulgur": "Bulgur",
+      "RolledOats": "Płatki owsiane",
+      "Cornmeal": "Mąka kukurydziana",
+      "BuckwheatGroats": "Kasza gryczana",
+      "PearlBarley": "Perłowa kasza jęczmienna",
+      "ArborioRice": "Ryż arborio",
+      "SushiRice": "Ryż sushi",
+      "BasmatiRice": "Ryż basmati",
+      "JasmineRice": "Ryż jaśminowy",
+      "BrownRice": "Brązowy ryż",
       "Milk": "Mleko",
-      "Eggs": "Jajka",
+      "Cheese": "Ser",
       "Butter": "Masło",
       "Yogurt": "Jogurt",
-      "Chicken": "Kurczak",
-      "Pork": "Wieprzowina",
-      "Beef": "Wołowina",
+      "Cream": "Śmietana",
+      "SourCream": "Kwaśna śmietana",
+      "CottageCheese": "Twaróg",
+      "IceCream": "Lody",
+      "WhippedCream": "Bita śmietana",
+      "CondensedMilk": "Mleko skondensowane",
+      "EvaporatedMilk": "Mleko zagęszczone",
+      "CreamCheese": "Ser śmietankowy",
+      "GreekYogurt": "Jogurt grecki",
+      "Mascarpone": "Mascarpone",
+      "RicottaCheese": "Ser ricotta",
+      "MozzarellaCheese": "Ser mozzarella",
+      "CheddarCheese": "Ser cheddar",
+      "ParmesanCheese": "Ser parmezan",
+      "FetaCheese": "Ser feta",
+      "ChickenBreast": "Pierś z kurczaka",
+      "ChickenThighs": "Udka z kurczaka",
+      "ChickenWings": "Skrzydełka z kurczaka",
+      "ChickenDrumsticks": "Łydki z kurczaka",
+      "GroundBeef": "Mięso mielone",
+      "BeefSteak": "Steak z wołowiny",
+      "PorkChops": "Sznycle wieprzowe",
+      "PorkTenderloin": "Polędwica wieprzowa",
+      "PorkRibs": "Żeberka wieprzowe",
+      "GroundPork": "Mięso mielone wieprzowe",
+      "Bacon": "Boczek",
+      "Sausages": "Kiełbaski",
       "Lamb": "Jagnięcina",
+      "GroundLamb": "Mięso mielone jagnięce",
+      "TurkeyBreast": "Pierś z indyka",
+      "TurkeyLegs": "Uda z indyka",
+      "GroundTurkey": "Mięso mielone z indyka",
+      "DuckBreast": "Pierś z kaczki",
+      "DuckLegs": "Uda z kaczki",
+      "VenisonSteak": "Stek z dziczyzny",
+      "VenisonGroundMeat": "Mięso mielone z dziczyzny",
+      "Ham": "Szynka",
+      "CornedBeef": "Wołowina peklowana",
+      "Salami": "Salami",
+      "HotDogs": "Hot dogi",
+      "Shrimp": "Krewetki",
       "Salmon": "Łosoś",
-      "Tuna": "Tuńczyk",
       "Cod": "Dorsz",
+      "Crab": "Krab",
+      "Lobster": "Homar",
+      "Scallops": "Muszle",
+      "Mussels": "Małże",
+      "Oysters": "Ostrygi",
+      "Squid": "Kalmar",
+      "Octopus": "Ośmiornica",
+      "Anchovies": "Anchois",
       "Trout": "Pstrąg",
+      "Flounder": "Flądra",
+      "Halibut": "Flądra północna",
+      "Mackerel": "Makrela",
+      "CannedTuna": "Tuńczyk w puszce",
+      "FishSticks": "Paluszki rybne",
+      "Caviar": "Kawior",
+      "Carrot": "Marchew",
       "Tomato": "Pomidor",
-      "Potato": "Ziemniak",
-      "Carrot": "Marchewka",
-      "Cabbage": "Cukinia",
-      "Apple": "Jabłko",
-      "Pear": "Gruszka",
-      "Orange": "Pomarańcza",
-      "Lemon": "Cytryna",
+      "Onion": "Cebula",
+      "Broccoli": "Brokuły",
+      "Cabbage": "Kapusta",
+      "Spinach": "Szpinak",
+      "Cauliflower": "Kalafior",
+      "BellPepper": "Papryka",
+      "Garlic": "Czosnek",
+      "Mushroom": "Grzyb",
+      "Zucchini": "Cukinia",
+      "Pumpkin": "Dynia",
+      "SweetPotato": "Batat",
+      "Cucumber": "Ogórek",
+      "Eggplant": "Bakłażan",
+      "Celery": "Seler",
+      "GreenBeans": "Fasolka szparagowa",
+      "Peas": "Groszek",
+      "Radish": "Rzodkiewka",
+      "Asparagus": "Szparagi",
+      "BrusselsSprouts": "Brukselka",
+      "Kale": "Jarmuż",
+      "Lettuce": "Sałata",
+      "Artichoke": "Karczoch",
+      "Beetroot": "Burak",
+      "Corn": "Kukurydza",
+      "Leek": "Por",
+      "Turnip": "Rzepa",
+      "Squashy": "Dynia",
+      "Basil": "Bazylia",
       "Parsley": "Pietruszka",
-      "Dill": "Koperek",
-      "Chives": "Szczypiorek",
+      "Cilantro": "Kolendra",
+      "Rosemary": "Rozmaryn",
+      "Thyme": "Tymianek",
+      "Sage": "Szałwia",
       "Oregano": "Oregano",
-      "WhiteBeans": "Biała fasola",
+      "Mint": "Mięta",
+      "Dill": "Koper",
+      "Chives": "Szczypiorek",
+      "BayLeaves": "Liście laurowe",
+      "Marjoram": "Macierzanka",
+      "Lemongrass": "Trawa cytrynowa",
+      "Lentils": "Soczewica",
       "RedKidneyBeans": "Czerwona fasola",
-      "SoyBeans": "Soja",
-      "Lentils": "Soczewica"
+      "SplitPeas": "Groch łuskany",
+      "LimaBeans": "Fasola lima",
+      "MungBeans": "Fasola mung"
     },
     "Diets": {
       "Basic": "Podstawowa",
